--- a/UIService/src/main/resources/templates/marks/for-student.html
+++ b/UIService/src/main/resources/templates/marks/for-student.html
@@ -10,30 +10,42 @@
 <section layout:fragment="content">
     <h1 th:text="'Оценки ученика ' + ${student.fullName()}"></h1>
 
-    <table class="table table-stripped">
-        <thead>
-        <tr>
-            <th>Предмет</th>
-            <th>Оценки</th>
-            <th>Средний балл</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="subject : ${subjects}">
-            <td th:text="${subject.name()}"></td>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr class="table-info">
+                <th>Предмет</th>
+                <th>Оценки</th>
+                <th>Средний балл</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="subject : ${subjects}">
+                <td class="table-success" th:text="${subject.name()}"></td>
 
-            <td th:if="${subjectIdToMarks.get(subject.id()) == null}">Нет выставленных оценок</td>
-            <td th:unless="${subjectIdToMarks.get(subject.id()) == null}">
-                <ul class="hr">
-                    <li th:each="mark : ${subjectIdToMarks.get(subject.id()).getMarks()}"
-                        th:text="${mark.markType}"></li>
-                </ul>
-            </td>
+                <td th:if="${subjectIdToMarks.get(subject.id()) == null}">Нет выставленных оценок</td>
+                <td th:unless="${subjectIdToMarks.get(subject.id()) == null}">
+                    <p th:each="mark : ${subjectIdToMarks.get(subject.id()).getMarks()}"
+                       class="grade"
+                       th:classappend="${mark.markType == '5' ? 'grade-excellent' : (mark.markType == '4' ? 'grade-excellent'
+                            : (mark.markType == '3' ? 'grade-good' : 'grade-bad'))}"
+                       th:text="${mark.markType}"></p>
+                </td>
 
-            <td th:text="${subjectIdToMarks.get(subject.id()) == null ? '-' : subjectIdToMarks.get(subject.id()).getAvg()}"></td>
-        </tr>
-        </tbody>
-    </table>
+                <th:block th:if="${subjectIdToMarks.get(subject.id()) != null}">
+                    <td th:text="${subjectIdToMarks.get(subject.id()).getAvg()}"
+                        class="grade"
+                        th:classappend="${subjectIdToMarks.get(subject.id()).getAvg() >= 4 ? 'grade-excellent'
+                        : (subjectIdToMarks.get(subject.id()).getAvg() >= 3 ? 'grade-good' :  'grade-bad')}"></td>
+                </th:block>
+                <th:block th:unless="${subjectIdToMarks.get(subject.id()) != null}">
+                    <td th:text="'-'"></td>
+                </th:block>
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
 </body>
 </html>
