--- a/UIService/src/main/resources/templates/lessonTimetable/lesson-timetable.html
+++ b/UIService/src/main/resources/templates/lessonTimetable/lesson-timetable.html
@@ -5,10 +5,17 @@
       layout:decorate="~{/fragments/layuots/base-layout}">
 <head>
     <title>Расписание уроков</title>
+    <script type="text/javascript" th:src="@{/js/actions.js}"></script>
+
 </head>
 <body>
 <section layout:fragment="content">
     <h1 th:text="'Расписание для ' + ${forTeacher ? 'учителя ' + teacher.fullName() : 'класса ' + class.name()}"></h1>
+
+    <p>
+        <label for="weekPicker">Выберите учебную неделю</label>
+        <input type="week" id="weekPicker" onchange="redirectToWeek()">
+    </p>
 
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
