Add studyPeriod picking on marks page

--- a/UIService/src/main/resources/templates/fragments/layuots/base-layout.html
+++ b/UIService/src/main/resources/templates/fragments/layuots/base-layout.html
@@ -13,9 +13,9 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/styles.css}">
+    <script type="text/javascript" th:src="@{/js/actions.js}"></script>
+
     <title layout:title-pattern="$CONTENT_TITLE"></title>
-
-
 </head>
 <body>
 
