--- a/UIService/src/main/resources/static/css/styles.css
+++ b/UIService/src/main/resources/static/css/styles.css
@@ -44,53 +44,50 @@ footer {
 }
 
 
+.container-with-center-align {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 100%; /* Убедитесь, что контейнер занимает всю ширину */
+}
 
+.study-period-list {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 75%;
+    background-color: #f1f1f1;
+}
 
-/*!*2*!*/
-/*.pcufu {*/
-/*    background-color: #cf3838;*/
-/*    color: #fff;*/
-/*}*/
-/*!*3*!*/
-/*.YiVWk {*/
-/*    background-color: #ff8f00;*/
-/*    color: #fff;*/
-/*}*/
-/*!*4 и 5*!*/
-/*.L4zz0 {*/
-/*    background-color: #4b9a25;*/
-/*    color: #fff;*/
-/*}*/
-/*.QoB5a {*/
-/*    height: 17px;*/
-/*    -webkit-box-sizing: border-box;*/
-/*    box-sizing: border-box;*/
-/*    color: #fff;*/
-/*    display: inline-block;*/
-/*    padding: 4px;*/
-/*    font-weight: 400;*/
-/*    font-size: 14px;*/
-/*    line-height: 9px;*/
-/*    border-radius: 2px;*/
-/*    cursor: default;*/
-/*}*/
-/*.RLesi {*/
-/*    width: 15px;*/
-/*    margin: auto;*/
-/*    -webkit-box-align: center;*/
-/*    -ms-flex-align: center;*/
-/*    align-items: center;*/
-/*    display: -webkit-box;*/
-/*    display: -ms-flexbox;*/
-/*    display: flex;*/
-/*    -webkit-box-pack: center;*/
-/*    -ms-flex-pack: center;*/
-/*    justify-content: center;*/
-/*    padding: 0;*/
-/*}*/
-/*.cgbDV {*/
-/*    cursor: pointer;*/
-/*}*/
+.study-period {
+    flex-grow: 1;
+    text-align: center;
+    margin: 0;
+}
+
+.study-period-link {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #000;
+    background-color: #f1f1f1;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+a:hover {
+    background-color: #ddd;
+}
+
+a:active {
+    background-color: #f1b622;
+}
+
 
 
 .form-error {
