--- a/UIService/src/main/resources/templates/meetings/create.html
+++ b/UIService/src/main/resources/templates/meetings/create.html
@@ -19,7 +19,7 @@
         <div class="form-group">
             <label for="inputDate">Дата</label>
             <input id="inputDate" type="datetime-local" class="form-control" name="dateTime"
-                   th:value="${#temporals.format(meeting.dateTime, 'yyyy-MM-dd HH:mm')}">
+                   th:value="${#temporals.format(meeting?.dateTime, 'yyyy-MM-dd HH:mm')}">
         </div>
 
         <div class="form-group">
