Add pretty print for lesson-timetable

--- a/UIService/src/main/resources/static/css/styles.css
+++ b/UIService/src/main/resources/static/css/styles.css
@@ -19,6 +19,10 @@ footer {
     padding: 20px; /* Отступы внутри footer */
 }
 
+.call-schedule-table {
+    text-align: center;
+}
+
 .table {
     table-layout: auto; /* Автоматическое определение ширины столбцов */
     width: auto; /* Ширина таблицы зависит от содержания */
@@ -132,6 +136,32 @@ footer {
 }
 
 
+.schedule-container {
+    border: 1px solid #ccc; /* Граница контейнера */
+    border-radius: 10px; /* Закругленные края */
+    padding: 10px; /* Внутренние отступы */
+    margin: 5px 0; /* Отступы снаружи */
+    background-color: #0dcaf0; /* Фоновый цвет контейнера */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Тень для контейнера */
+}
+
+.schedule-item {
+    display: flex;
+    justify-content: space-between; /* Разделение элементов внутри по горизонтали */
+    align-items: center; /* Вертикальное выравнивание по центру */
+    padding: 4px 0; /* Отступы сверху и снизу для элементов */
+    border-bottom: 2px solid black; /* Разделительная линия между элементами */
+    color: black;
+}
+
+.schedule-item:last-child {
+    border-bottom: none; /* Удаление линии для последнего элемента */
+}
+
+.schedule-time {
+    font-weight: bold; /* Жирный текст для времени */
+    color: black; /* Цвет текста */
+}
 
 
 .form-error {
