--- a/UIService/src/main/resources/templates/lessonTimetable/lesson-timetable.html
+++ b/UIService/src/main/resources/templates/lessonTimetable/lesson-timetable.html
@@ -28,16 +28,16 @@
                 <td th:each="date : ${period}">
 
                     <div th:if="${lessonTimetable.get(date) == null || lessonTimetable.get(date).get(i) == null}"
-                         th:text="'-'"></div>
-                    <div th:if="${lessonTimetable.get(date) != null && lessonTimetable.get(date).get(i) != null}">
-                        <p th:text="'Номер урока: ' + ${lessonTimetable.get(date).get(i).lessonNumber}"></p>
-                        <p th:text="'Предмет: ' + ${lessonTimetable.get(date).get(i).subject}"></p>
-                        <p th:if="${forTeacher}"
-                           th:text="'Класс: ' + ${lessonTimetable.get(date).get(i).className}"></p>
-                        <p th:if="${!forTeacher}"
-                           th:text="'Преподаватель: ' + ${lessonTimetable.get(date).get(i).teacherFullName}"></p>
-                        <p th:text="'Аудитория: ' + ${lessonTimetable.get(date).get(i).classRoom}"></p>
-                        <p th:text="'Время: ' + ${lessonTimetable.get(date).get(i).startTime + '-' + lessonTimetable.get(date).get(i).endTime}"></p>
+                         th:text="''"></div>
+                    <div class="schedule-container" th:if="${lessonTimetable.get(date) != null && lessonTimetable.get(date).get(i) != null}">
+                        <p class="schedule-item" th:text="'Урок ' + ${lessonTimetable.get(date).get(i).lessonNumber}"></p>
+                        <p class="schedule-item" th:text="${lessonTimetable.get(date).get(i).subject}"></p>
+                        <p class="schedule-item schedule-time" th:text="${lessonTimetable.get(date).get(i).startTime + '-' + lessonTimetable.get(date).get(i).endTime}"></p>
+                        <p class="schedule-item" th:if="${forTeacher}"
+                           th:text="${lessonTimetable.get(date).get(i).className}"></p>
+                        <p class="schedule-item" th:if="${!forTeacher}"
+                           th:text="${lessonTimetable.get(date).get(i).teacherFullName}"></p>
+                        <p class="schedule-item" th:text="'Аудитория: ' + ${lessonTimetable.get(date).get(i).classRoom}"></p>
                     </div>
 
                 </td>
