Add pretty print for call-schedule

--- a/UIService/src/main/resources/templates/callSchedule/call-schedule.html
+++ b/UIService/src/main/resources/templates/callSchedule/call-schedule.html
@@ -12,7 +12,7 @@
     <h1>Расписание звонков</h1>
 
     <div class="table-responsive">
-        <table class="table table-striped table-bordered">
+        <table class="table table-striped table-bordered call-schedule-table">
             <thead>
             <tr class="table-info">
                 <th>Номер урока</th>
